--- a/src/scss/pages/index/_slider.scss
+++ b/src/scss/pages/index/_slider.scss
@@ -5,15 +5,26 @@
 
     &__wrapper {
         height: 100%;
+        width: 100%;
+        position: relative;
+        overflow: hidden;
     }
 
     &__item {
         @extend %full-bg;
         display: flex;
+        position: absolute;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100%;
+        width: 100%;
+        transition: 0.6s ease;
+        transform: translate(-100%, 0);
+        
+        &--active {
+            transform: translate(0, 0);
+        }
     }
 
     &__title {
